addProductPage를 bottomSheet로 변경

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
    <meta charset="utf-8">
-   <title>My React App from Scratch</title>
+   <title>Likey</title>
+   <link rel="stylesheet" href="https://unpkg.com/react-spring-bottom-sheet/dist/style.css" crossorigin="anonymous">
 </head>
 <body>
    <div id="app"></div>
